# oneNew

./: .gitignore  CMakeLists.txt  README.md
0206_2_oneNew/: CMakeLists.txt  self_test.sh
0206_2_oneNew/device/: CMakeLists.txt
0206_2_oneNew/device/x86/Add/: CMakeLists.txt
0206_2_oneNew/device/x86/Conv/: conv.c
0206_2_oneNew/device/x86/GlobalAveragePool/: CMakeLists.txt
0206_2_oneNew/device/x86/MaxPool/: CMakeLists.txt  maxpool.c
0206_2_oneNew/device/x86/Relu/: relu.c
0206_2_oneNew/device/x86/Softmax/: CMakeLists.txt  softmax.c
0208_1_oneNew/device/: CMakeLists.txt
0208_1_oneNew/device/cuda/add/: t2.cu
0208_1_oneNew/device/x86/Add/: add.c  add.h
0208_1_oneNew/device/x86/Argmax/: CMakeLists.txt  argmax.c
0208_1_oneNew/device/x86/Conv/: CMakeLists.txt  conv.c  conv.h
0208_1_oneNew/device/x86/GlobalAveragePool/: global_avgpool.c
0208_1_oneNew/device/x86/MaxPool/: maxpool.c  maxpool.h
0208_1_oneNew/device/x86/Relu/: CMakeLists.txt  relu.c  relu.h
0208_1_oneNew/device/x86/Softmax/: softmax.c
0208_1_oneNew/host/op/: CMakeLists.txt  add.h  conv.h  flatten.h  gemm.h  global_avgpool.h  io.h  maxpool.h  net.h  op.h  relu.h  relu_conv.one  test_net copy.cpp  test_net.cpp  test_net.cpp_bak  test_net.cpp_bak02  transform.cpp  transforms.cpp
common/: log.h  nn_common.h  nn_common.h_bak  utils_c.h  (+2 more)
cuda_demo/: CMakeLists.txt  main_test.cu  main_test.h
cuda_demo/ops/: gemm.cu  reduce.cu  transpose.cu
device/: CMakeLists.txt
device/cuda/: CMakeLists.txt
device/cuda/Add/: CMakeLists.txt  add.cu  add.h
device/cuda/Conv/: CMakeLists.txt  conv.cu  pad_conv.h
device/cuda/GlobalAveragePool/: CMakeLists.txt  global_avgpool.cu  global_avgpool.h
device/cuda/MaxPool/: CMakeLists.txt  maxpool.cu  maxpool.h
device/naive/Add/: CMakeLists.txt  add.c
device/naive/Argmax/: CMakeLists.txt  argmax.c  argmax.h
device/naive/Conv/: CMakeLists.txt  aa  conv.c_bak  conv.c_bak01_0523  conv.c_bak02_0523_yes  conv.c_bak2  conv.c_bak3  conv.c_bak3_down3s  conv.c_bak4_down2s  conv.c_bak5_img2col  conv.cpp_bak3_0523_yes  conv.cu  conv.cu_ba.cpp  conv.h  t1.c
device/naive/Flatten/: CMakeLists.txt  flatten.c  flatten.h
device/naive/Gemm/: CMakeLists.txt  gemm.c
device/naive/GlobalAveragePool/: CMakeLists.txt  global_avgpool.c  global_avgpool.h
device/naive/MaxPool/: CMakeLists.txt  maxpool.c  pad_maxpool.h
device/naive/Relu/: CMakeLists.txt  relu.c
device/naive/Softmax/: CMakeLists.txt  softmax.c  softmax.h
device/x86/: CMakeLists.txt
device/x86/Add/: CMakeLists.txt  add.c  add.h
device/x86/ArgMax/: CMakeLists.txt  argmax.c  argmax.h
device/x86/Argmax/: CMakeLists.txt
device/x86/AveragePool/: CMakeLists.txt  avgpool.c  avgpool.h  pad_avgpool.h
device/x86/Clip/: CMakeLists.txt  clip.c  clip.h
device/x86/Concat/: CMakeLists.txt  concat.c  concat.h
device/x86/Conv/: CMakeLists.txt  conv.c  conv.h  conv_pad.h
device/x86/ConvTranspose/: CMakeLists.txt  conv_transpose.c  conv_transpose.h
device/x86/Cos/: CMakeLists.txt  cos.c  cos.h
device/x86/Div/: CMakeLists.txt  div.c  div.h
device/x86/Einsum/: CMakeLists.txt  einsum.c  einsum.h
device/x86/Erf/: CMakeLists.txt  erf.c  erf.h
device/x86/Expand/: CMakeLists.txt  expand.c  expand.h
device/x86/Flatten/: CMakeLists.txt  flatten.c  flatten.h
device/x86/Gather/: CMakeLists.txt  gather.c  gather.h
device/x86/Gelu/: CMakeLists.txt  gelu.c  gelu.h
device/x86/Gemm/: CMakeLists.txt  gemm.c  gemm.h
device/x86/GlobalAveragePool/: CMakeLists.txt  global_avgpool.c  global_avgpool.h
device/x86/GridSample/: CMakeLists.txt  grid_sample.c  grid_sample.h
device/x86/HardSigmoid/: CMakeLists.txt  hard_sigmoid.c  hard_sigmoid.h
device/x86/LayerNorm/: CMakeLists.txt  layer_norm.c  layer_norm.h
device/x86/LayerNormalization/: CMakeLists.txt  layer_normalization.c  layer_normalization.h
device/x86/LeakyRelu/: CMakeLists.txt  leaky_relu.c  leaky_relu.h
device/x86/Log/: CMakeLists.txt  log.c  log.h
device/x86/MatMul/: CMakeLists.txt  mat_mul.c  mat_mul.h
device/x86/MaxPool/: CMakeLists.txt  maxpool.c  maxpool.h  pad_maxpool.h
device/x86/Mul/: CMakeLists.txt  mul.c  mul.h
device/x86/ObjectDetect/: CMakeLists.txt  object_detect.c  object_detect.h
device/x86/Pad/: CMakeLists.txt  pad.c  pad.h
device/x86/PoseDetect/: CMakeLists.txt  pose_detect.c  pose_detect.h
device/x86/PoseDetection/: CMakeLists.txt  pose_detection.c
device/x86/Pow/: CMakeLists.txt  pow.c  pow.h
device/x86/ReduceMax/: CMakeLists.txt  reduce_max.c  reduce_max.h
device/x86/ReduceMean/: CMakeLists.txt  reduce_mean.c  reduce_mean.h
device/x86/ReduceSum/: CMakeLists.txt  reduce_sum.c  reduce_sum.h
device/x86/Relu/: CMakeLists.txt  relu.c  relu.h
device/x86/Reshape/: CMakeLists.txt  reshape.c  reshape.h
device/x86/Resize/: CMakeLists.txt  resize.c  resize.h
device/x86/Segment/: CMakeLists.txt  segment.c  segment.h
device/x86/Sigmoid/: CMakeLists.txt  sigmoid.c  sigmoid.h
device/x86/Sin/: CMakeLists.txt  sin.c  sin.h
device/x86/Slice/: CMakeLists.txt  slice.c  slice.h
device/x86/Softmax/: CMakeLists.txt  softmax.c  softmax.h
device/x86/Split/: CMakeLists.txt  split.c  split.h
device/x86/Sqrt/: CMakeLists.txt  sqrt.c  sqrt.h
device/x86/Squeeze/: CMakeLists.txt  squeeze.c  squeeze.h
device/x86/Sub/: CMakeLists.txt  sub.c  sub.h
device/x86/Tile/: CMakeLists.txt  tile.c  tile.h
device/x86/TopK/: CMakeLists.txt  top_k.c  top_k.h
device/x86/Transpose/: CMakeLists.txt  transpose.c  transpose.h
device/x86/Unsqueeze/: CMakeLists.txt  unsqueeze.c  unsqueeze.h
device/x86_utils/: nms_impl.h  opt_gemm.h
example/: CLIP_model.h  CMakeLists.txt  MobileSAM_model.h  Normal_model.h  model_infer.cpp  post_process.hpp
tools/metrics/: CMakeLists.txt  metrics.cpp  net_metrics.cpp  net_metrics.cpp_bak  net_metrics.cpp_bak2
tools/onnx2one/: CMakeLists.txt  onnx2one.cpp  onnx2one.cpp_bak  onnx2one.cpp_bak2  onnx2one.cpp_bak3
tools/optimize/: CMakeLists.txt  auto_tuning.hpp  model_quant.hpp  op_fusion.hpp  optimize.cpp  optimize.hpp  optimize_one.cpp
tools/quant/: CMakeLists.txt  quant_conv_one.cpp
(+302 files in other folders)
